heating-tank-fmu example for the Sphinx gallery examples (#240)
* heating-tank-fmu example for the Sphinx gallery examples

* apply pre-commit fixes to heating_tank_fmu.py

* update existing parameteric sweep for Fluent API change

* Fix doc warnings in heating_tank_fmu.py

* update Fluent API call to remove warning from output

* Update Sphinx Gallery examples and include new heating_tank_fmu

* rerun parametric_sweep to remove Fluent warning

* try increasing memory for latex

---------

Co-authored-by: kgiannok <konstantinos.giannokostas@ansys.com>
Co-authored-by: Ian Boyd <ian.boyd@ansys.com>
Co-authored-by: Ian Boyd <93142264+iboyd-ansys@users.noreply.github.com>

--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\n\nimport matplotlib.pyplot as plt\nimport numpy as np\n\nimport ansys.dpf.core as pydpf\nimport ansys.fluent.core as pyfluent\nimport ansys.systemcoupling.core as pysyc\nfrom ansys.systemcoupling.core.syc_version import SYC_VERSION_DOT\n\nfrom ansys.systemcoupling.core import examples"
+        "import os\n\nimport ansys.dpf.core as pydpf\nimport ansys.fluent.core as pyfluent\nimport matplotlib.pyplot as plt\nimport numpy as np\n\nimport ansys.systemcoupling.core as pysyc\nfrom ansys.systemcoupling.core import examples\nfrom ansys.systemcoupling.core.syc_version import SYC_VERSION_DOT"
       ]
     },
     {
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "def set_inlet_velocity(working_dir, inlet_velocity):\n  with pyfluent.launch_fluent(product_version=f\"{SYC_VERSION_DOT}.0\",\n                              precision=\"double\",\n                              processor_count=2) as session:\n      case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n      session.file.read(file_type=\"case\", file_name=case_file)\n      session.setup.boundary_conditions.velocity_inlet[\n          \"wall_inlet\"\n      ].vmag.value = inlet_velocity\n      session.tui.file.write_case(case_file, \"yes\")\n\n  print(f\"Inlet velocity is set to {inlet_velocity}\")"
+        "def set_inlet_velocity(working_dir, inlet_velocity):\n    with pyfluent.launch_fluent(\n        product_version=f\"{SYC_VERSION_DOT}.0\", precision=\"double\", processor_count=2\n    ) as session:\n        case_file = os.path.join(working_dir, \"Fluent\", \"case.cas.h5\")\n        session.file.read(file_type=\"case\", file_name=case_file)\n        session.setup.boundary_conditions.velocity_inlet[\n            \"wall_inlet\"\n        ].momentum.velocity = inlet_velocity\n        session.file.write(file_type=\"case\", file_name=case_file)\n\n    print(f\"Inlet velocity is set to {inlet_velocity}\")"
       ]
     },
     {
@@ -76,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "def solve_coupled_analysis(working_dir):\n    with pysyc.launch(working_dir=working_dir) as syc:\n        print(\"Setting up the coupled analysis.\")\n\n        fluent_name = syc.setup.add_participant(\n            input_file = os.path.join(\"Fluent\", \"fluent.scp\"))\n\n        mapdl_name = syc.setup.add_participant(\n            input_file = os.path.join(\"Mapdl\", \"mapdl.scp\"))\n\n        fsi_name = syc.setup.add_interface(\n            side_one_participant = fluent_name, side_one_regions = ['wall_deforming'],\n            side_two_participant = mapdl_name, side_two_regions = ['FSIN_1'])\n\n        syc.setup.add_data_transfer(\n            interface = fsi_name, target_side = 'One',\n            source_variable = 'INCD', target_variable = 'displacement')\n\n        syc.setup.add_data_transfer(\n            interface = fsi_name, target_side = 'Two',\n            source_variable = 'force', target_variable = 'FORC')\n\n        syc.setup.solution_control.maximum_iterations = 7\n\n        print(\"Solving the coupled analysis. This may take a while....\")\n        syc.solution.solve()\n\n    print(\"...done.\")"
+        "def solve_coupled_analysis(working_dir):\n    with pysyc.launch(working_dir=working_dir) as syc:\n        print(\"Setting up the coupled analysis.\")\n\n        fluent_name = syc.setup.add_participant(\n            input_file=os.path.join(\"Fluent\", \"fluent.scp\")\n        )\n\n        mapdl_name = syc.setup.add_participant(\n            input_file=os.path.join(\"Mapdl\", \"mapdl.scp\")\n        )\n\n        fsi_name = syc.setup.add_interface(\n            side_one_participant=fluent_name,\n            side_one_regions=[\"wall_deforming\"],\n            side_two_participant=mapdl_name,\n            side_two_regions=[\"FSIN_1\"],\n        )\n\n        syc.setup.add_data_transfer(\n            interface=fsi_name,\n            target_side=\"One\",\n            source_variable=\"INCD\",\n            target_variable=\"displacement\",\n        )\n\n        syc.setup.add_data_transfer(\n            interface=fsi_name,\n            target_side=\"Two\",\n            source_variable=\"force\",\n            target_variable=\"FORC\",\n        )\n\n        syc.setup.solution_control.maximum_iterations = 7\n\n        print(\"Solving the coupled analysis. This may take a while....\")\n        syc.solution.solve()\n\n    print(\"...done.\")"
       ]
     },
     {
@@ -94,7 +94,7 @@
       },
       "outputs": [],
       "source": [
-        "def extract_max_displacement(working_dir):\n  print(\"Extracting max displacement value\")\n  model = pydpf.Model(os.path.join(working_dir, \"Mapdl\", \"file.rst\"))\n  displacements = model.results.displacement()\n  fields = displacements.outputs.fields_container()\n  value = max([v[0] for v in fields[0].data])\n  print(f\"Max displacement value = {value}\")\n  return value"
+        "def extract_max_displacement(working_dir):\n    print(\"Extracting max displacement value\")\n    model = pydpf.Model(os.path.join(working_dir, \"Mapdl\", \"file.rst\"))\n    displacements = model.results.displacement()\n    fields = displacements.outputs.fields_container()\n    value = max([v[0] for v in fields[0].data])\n    print(f\"Max displacement value = {value}\")\n    return value"
       ]
     },
     {
@@ -112,7 +112,7 @@
       },
       "outputs": [],
       "source": [
-        "def get_max_displacement(working_dir, inlet_velocity):\n  set_inlet_velocity(working_dir, inlet_velocity)\n  solve_coupled_analysis(working_dir)\n  return extract_max_displacement(working_dir)"
+        "def get_max_displacement(working_dir, inlet_velocity):\n    set_inlet_velocity(working_dir, inlet_velocity)\n    solve_coupled_analysis(working_dir)\n    return extract_max_displacement(working_dir)"
       ]
     },
     {
@@ -130,7 +130,7 @@
       },
       "outputs": [],
       "source": [
-        "def plot(working_dir, x, y):\n  fig, ax = plt.subplots()\n  ax.plot(x, y, \"-o\")\n  ax.set(\n    xlabel=\"Inlet velocity [m/s]\",\n    ylabel='Max Displacement [m]',\n    title=\"Plate max displacement vs. inlet velocity\")\n  ax.grid()\n  plt.savefig(os.path.join(working_dir, \"displacement\"))"
+        "def plot(working_dir, x, y):\n    fig, ax = plt.subplots()\n    ax.plot(x, y, \"-o\")\n    ax.set(\n        xlabel=\"Inlet velocity [m/s]\",\n        ylabel=\"Max Displacement [m]\",\n        title=\"Plate max displacement vs. inlet velocity\",\n    )\n    ax.grid()\n    plt.savefig(os.path.join(working_dir, \"displacement\"))"
       ]
     },
     {
@@ -148,7 +148,7 @@
       },
       "outputs": [],
       "source": [
-        "x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n  y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
+        "x = np.array([5.0, 10.0, 15.0, 20.0, 25.0])\ny = np.array([0.0] * len(x))\n\nworking_dir = setup_working_directory()\n\nfor index, inlet_velocity in enumerate(x):\n    y[index] = get_max_displacement(working_dir, inlet_velocity)\n\nplot(working_dir, x, y)"
       ]
     }
   ],
@@ -168,7 +168,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
