--- a/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
+++ b/doc/source/examples/00-systemcoupling/parametric_sweep_vel.ipynb
@@ -65,7 +65,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Solve coupled analysis\nPerform a single coupled analysis. In this example, the only change\nbetween successive calls to this function is in the content of the\nFluent input file that is used. The value for the ``inlet_velocity``\nsetting is modified in the Fluent file prior to this function being called.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>System Coupling is launched anew for each call of\n   this function.\n\n   The ``with pysyc.launch(...)`` syntax ensures\n   that the System Coupling session is properly exited at the\n   end of the scope defined by the ``with`` block.</p></div>\n\n"
+        "### Solve coupled analysis\nPerform a single coupled analysis. In this example, the only change\nbetween successive calls to this function is in the content of the\nFluent input file that is used. The value for the ``inlet_velocity``\nsetting is modified in the Fluent file prior to this function being called.\n\n<div class=\"alert alert-info\"><h4>Note</h4><p>A new System Coupling instance is launched for each call of\n   this function.\n\n   The ``with pysyc.launch(...)`` syntax ensures\n   that the System Coupling session is properly exited at the\n   end of the scope defined by the ``with`` block.</p></div>\n\n"
       ]
     },
     {
@@ -168,7 +168,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
